--- a/notebooks/data-analysis.ipynb
+++ b/notebooks/data-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "38871b42",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,257 @@
     "\n",
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e0f3b03b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>token0_amounts</th>\n",
+       "      <th>token1_outputs</th>\n",
+       "      <th>token1_inputs</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>[0.0001, 0.001, 0.01]</td>\n",
+       "      <td>[{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...</td>\n",
+       "      <td>[{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...</td>\n",
+       "      <td>1753888107</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           token0_amounts                                     token1_outputs  \\\n",
+       "0   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "1   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "2   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "3   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "4   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "5   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "6   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "7   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "8   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "9   [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "10  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "11  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "12  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "13  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "14  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "15  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "16  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "17  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "18  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "19  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "20  [0.0001, 0.001, 0.01]  [{'raw': 0, 'amount': 0.0}, {'raw': 0, 'amount...   \n",
+       "\n",
+       "                                        token1_inputs   timestamp  \n",
+       "0   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888087  \n",
+       "1   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888088  \n",
+       "2   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888089  \n",
+       "3   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888090  \n",
+       "4   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888091  \n",
+       "5   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888092  \n",
+       "6   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888093  \n",
+       "7   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888094  \n",
+       "8   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888095  \n",
+       "9   [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888096  \n",
+       "10  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888097  \n",
+       "11  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888098  \n",
+       "12  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888099  \n",
+       "13  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888100  \n",
+       "14  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888101  \n",
+       "15  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888102  \n",
+       "16  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888103  \n",
+       "17  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888104  \n",
+       "18  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888105  \n",
+       "19  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888106  \n",
+       "20  [{'raw': 100, 'amount': 1e-16}, {'raw': 1000, ...  1753888107  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"/home/tobias/personal-dex-trading/out/data/unichain_uniswap_v2_blocks.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "538dd7a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
