--- a/notebooks/data-analysis.ipynb
+++ b/notebooks/data-analysis.ipynb
@@ -3,34 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38871b42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ast\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bcafe428",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_unichain = pd.read_csv(\"/home/tobias/personal-dex-trading/out/data/20250801_142508_unichain_uniswap_v4_blocks.csv\", index_col=\"timestamp\")\n",
-    "df_unichain.index = pd.to_datetime(df_unichain.index, unit=\"s\")  # seconds -> datetime\n",
-    "df_unichain.index += pd.Timedelta(hours=2)\n",
-    "df_unichain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0514753d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ast\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "\n",
     "BINANCE_FEE = 0.001 # 0.1% for Regular User https://www.binance.com/en/fee/trading\n",
     "\n",
     "def _top_price(side_str: str) -> float | None:\n",
@@ -54,23 +34,22 @@
     "    \"\"\"\n",
     "    df[\"best_bid_with_fee\"] = df[\"best_bid\"] * (1 - BINANCE_FEE)  # Subtract fee for bids\n",
     "    df[\"best_ask_with_fee\"] = df[\"best_ask\"] * (1 + BINANCE_FEE)  # Add fee for asks\n",
+    "    df[\"best_bid_with_fee_VIP9\"] = df[\"best_bid\"] * (1 - BINANCE_FEE)  # Subtract fee for bids\n",
+    "    df[\"best_ask_with_fee_VIP9\"] = df[\"best_ask\"] * (1 + BINANCE_FEE)  # Add fee for asks\n",
     "\n",
     "    return df\n",
     "\n",
+    "# Unichain\n",
+    "df_unichain = pd.read_csv(\"/home/tobias/personal-dex-trading/out/data/latest_unichain_uniswap_v4_blocks.csv\", index_col=\"timestamp\")\n",
+    "df_unichain.index = pd.to_datetime(df_unichain.index, unit=\"s\")  # seconds -> datetime\n",
+    "df_unichain.index += pd.Timedelta(hours=2)\n",
     "\n",
-    "binance_df = load_binance(\"/home/tobias/personal-dex-trading/out/data/20250801_142514_binance_ws_orderbook.csv\")\n",
+    "# Binance\n",
+    "binance_df = load_binance(\"/home/tobias/personal-dex-trading/out/data/latest_binance_ws_orderbook.csv\")\n",
     "binance_df[\"time\"] = pd.to_datetime(binance_df[\"time\"])\n",
     "binance_df = apply_fee(binance_df)\n",
-    "binance_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c871367",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "# merge df\n",
     "merged_df =  pd.merge_asof(\n",
     "    binance_df.sort_values(\"time\"),\n",
     "    df_unichain.sort_index(),\n",
@@ -80,7 +59,7 @@
     ")\n",
     "merged_df[\"bid_0.00001_weth\"] = (merged_df[\"token1_outputs\"].apply(ast.literal_eval).apply(lambda x: x[0][0] if isinstance(x, list) else None) / 10**6)\n",
     "merged_df[\"ask_0.00001_weth\"] = (merged_df[\"token1_inputs\"].apply(ast.literal_eval).apply(lambda x: x[0][0] if isinstance(x, list) else None) / 10**6)\n",
-    "merged_df"
+    "merged_df.head(2)"
    ]
   },
   {
@@ -93,7 +72,7 @@
     "import plotly.express as px\n",
     "\n",
     "long_df = merged_df.melt(id_vars=\"time\",\n",
-    "                         value_vars=[\"best_bid\", \"best_ask\", \"bid_0.00001_weth\", \"ask_0.00001_weth\"],\n",
+    "                         value_vars=[\"best_bid_with_fee\", \"best_ask_with_fee\", \"bid_0.00001_weth\", \"ask_0.00001_weth\"],\n",
     "                         var_name=\"Type\",\n",
     "                         value_name=\"Price\")\n",
     "\n",
@@ -118,113 +97,6 @@
     "# Show the plot\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "810ea415",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BINANCE_CSV   = \"/home/tobias/personal-dex-trading/out/data/order_book.csv\"\n",
-    "UNICHAIN_CSV  = \"/home/tobias/personal-dex-trading/out/data/block_data.csv\"\n",
-    "\n",
-    "def _top_price(side_str: str) -> float | None:\n",
-    "    \"\"\"Return the first price in a stringified list of bids/asks.\"\"\"\n",
-    "    try:\n",
-    "        side = ast.literal_eval(side_str)\n",
-    "        return float(side[0][0]) if side else None\n",
-    "    except Exception:\n",
-    "        return None\n",
-    "\n",
-    "def load_binance(path: str) -> pd.DataFrame:\n",
-    "    df = pd.read_csv(path)           # columns: time, bids, asks\n",
-    "    df[\"best_bid\"] = df[\"bids\"].apply(_top_price)\n",
-    "    df[\"best_ask\"] = df[\"asks\"].apply(_top_price)\n",
-    "\n",
-    "    return df[[\"time\", \"best_bid\", \"best_ask\"]].sort_values(\"time\")\n",
-    "\n",
-    "def load_unichain(path: str) -> pd.DataFrame:\n",
-    "    df = pd.read_csv(path, index_col=\"timestamp\")\n",
-    "    df.index = pd.to_datetime(df.index, unit=\"s\")  # seconds -> datetime\n",
-    "    df.index += pd.Timedelta(hours=2)              # match binance tz\n",
-    "\n",
-    "    # Pivot so each input size has its own column of output_value\n",
-    "    df_pivot = (\n",
-    "        df.reset_index()\n",
-    "          .pivot_table(index=\"timestamp\",\n",
-    "                       columns=\"input_value\",\n",
-    "                       values=\"output_value\")\n",
-    "          .rename_axis(None, axis=1)\n",
-    "          .sort_index()\n",
-    "    )\n",
-    "\n",
-    "    # Convert WETH→USDC **prices** (USDC per 1 WETH) for each size\n",
-    "    price_cols = {}\n",
-    "    for in_size in df_pivot.columns:\n",
-    "        price_cols[f\"uni_px_{in_size}\"] = df_pivot[in_size] / in_size\n",
-    "\n",
-    "    df_px = pd.concat(price_cols, axis=1)\n",
-    "    return pd.concat([df_pivot, df_px], axis=1).reset_index(names=\"time\")\n",
-    "\n",
-    "def merge_dfs(df_bin: pd.DataFrame, df_uni: pd.DataFrame) -> pd.DataFrame:\n",
-    "    df_bin['time'] = pd.to_datetime(df_bin['time'])\n",
-    "    df_uni['time'] = pd.to_datetime(df_uni['time'])\n",
-    "    df_uni_unique = df_uni.drop_duplicates(subset=['time'], keep='first')\n",
-    "    merged_df = pd.merge(\n",
-    "        df_bin,\n",
-    "        df_uni_unique,\n",
-    "        on='time',\n",
-    "        how='left'\n",
-    "    )\n",
-    "    return merged_df\n",
-    "\n",
-    "def add_arbitrage_cols(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    A. Long-Binance / Short-Unichain:\n",
-    "         buy WETH on Binance @ best_ask, immediately sell on Unichain.\n",
-    "    B. Long-Unichain / Short-Binance:\n",
-    "         buy WETH on Unichain (reverse swap) and sell on Binance @ best_bid.\n",
-    "       For (B) we only have the forward quote; a rough proxy is to use\n",
-    "       best_bid / uni_px   (not perfect – use reverse quote if available).\n",
-    "    \"\"\"\n",
-    "    # We’ll take the smallest quoted size (0.0001 WETH) as representative:\n",
-    "    uni_price = df[\"uni_px_0.0001\"]\n",
-    "\n",
-    "    df[\"edge_binance→uni\"] = uni_price - df[\"best_ask\"]   # positive ⇒ profit\n",
-    "    df[\"edge_uni→binance\"] = df[\"best_bid\"] - uni_price   # positive ⇒ profit\n",
-    "    return df\n",
-    "\n",
-    "def main():\n",
-    "    df_bin = load_binance(BINANCE_CSV)\n",
-    "    df_uni = load_unichain(UNICHAIN_CSV)\n",
-    "\n",
-    "    merged = merge_dfs(df_bin, df_uni)\n",
-    "    merged = add_arbitrage_cols(merged)\n",
-    "\n",
-    "    # Save or plot if you wish:\n",
-    "    #merged.to_csv(\"merged_for_analysis.csv\", index=False)\n",
-    "    return merged"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b90c867",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged = main()\n",
-    "merged"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95a90b1a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
