Add uniswap v4 multi-stream + flush to csv

--- a/notebooks/data-analysis.ipynb
+++ b/notebooks/data-analysis.ipynb
@@ -3,15 +3,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0514753d",
+   "id": "32ab6cae",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### SETUP\n",
+    "\n",
     "import ast\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
+    "import json\n",
+    "\n",
+    "# Pool Meta-data\n",
+    "def load_pools(json_filepath):\n",
+    "    \"\"\"Load pool data from json (The Graph)\"\"\"\n",
+    "    with open(json_filepath, \"r\", encoding=\"utf-8\") as f:\n",
+    "        return json.load(f)[\"data\"][\"pools\"]\n",
+    "\n",
+    "pools = load_pools(\"../unichain_v4_pools.json\")\n",
+    "unique_tokens = []\n",
+    "for pool in pools:\n",
+    "    token0 = pool[\"token0\"]\n",
+    "    token1 = pool[\"token1\"]\n",
+    "    unique_tokens.append({\"symbol\": token0[\"symbol\"], \"decimals\": int(token0[\"decimals\"])})\n",
+    "    unique_tokens.append({\"symbol\": token1[\"symbol\"], \"decimals\": int(token1[\"decimals\"])})\n",
+    "df_tokens = pd.DataFrame(unique_tokens).drop_duplicates().reset_index(drop=True)\n",
+    "df_tokens.set_index(\"symbol\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50966cca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### UNICHAIN\n",
+    "\n",
+    "df_unichain = pd.read_csv(\"/home/tobias/personal-dex-trading/out/data/latest_unichain_uniswap_v4.csv\")\n",
+    "df_unichain[\"timestamp\"] = pd.to_datetime(df_unichain[\"timestamp\"], unit=\"s\")  # seconds -> datetime\n",
+    "df_unichain[\"timestamp\"] += pd.Timedelta(hours=2)\n",
+    "df_unichain[\"bid\"] = pd.to_numeric(df_unichain[\"bid\"], errors=\"coerce\")\n",
+    "df_unichain[\"ask\"] = pd.to_numeric(df_unichain[\"ask\"], errors=\"coerce\")\n",
+    "\n",
+    "# transform token1\n",
+    "df_unichain[\"bid_transformed\"] = df_unichain.apply(\n",
+    "    lambda row: row[\"bid\"] / (10 ** df_tokens.loc[row[\"token1_symbol\"], \"decimals\"]), axis=1\n",
+    ")\n",
+    "df_unichain[\"ask_transformed\"] = df_unichain.apply(\n",
+    "    lambda row: row[\"ask\"] / (10 ** df_tokens.loc[row[\"token1_symbol\"], \"decimals\"]), axis=1\n",
+    ")\n",
+    "\n",
+    "# transform token0\n",
+    "df_unichain[\"amount_in_transformed\"] = df_unichain.apply(\n",
+    "    lambda row: row[\"amount_in\"] / (10 ** df_tokens.loc[row[\"token0_symbol\"], \"decimals\"]), axis=1\n",
+    ")\n",
+    "\n",
+    "# normalize bid / ask\n",
+    "df_unichain[\"bid_trans_norm\"] = df_unichain[\"bid_transformed\"] / df_unichain[\"amount_in_transformed\"]\n",
+    "df_unichain[\"ask_trans_norm\"] = df_unichain[\"ask_transformed\"] / df_unichain[\"amount_in_transformed\"]\n",
+    "\n",
+    "# tokenpair\n",
+    "df_unichain[\"token_pair\"] = df_unichain[\"token0_symbol\"].str.lower()+ df_unichain[\"token1_symbol\"].str.lower()\n",
+    "# only take one amount_in\n",
+    "df_unichain = df_unichain.groupby([\"pool_id\", \"block_number\"]).first().reset_index()\n",
+    "print(f\"len(df_unichain): {len(df_unichain)}\")\n",
+    "df_unichain.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76cfe695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### BINANCE\n",
     "\n",
     "BINANCE_FEE = 0.001 # 0.1% for Regular User https://www.binance.com/en/fee/trading\n",
+    "BINANCE_FEE_VIP9 = 0.00011\n",
     "\n",
     "def _top_price(side_str: str) -> float | None:\n",
     "    \"\"\"Return the first price in a stringified list of bids/asks.\"\"\"\n",
@@ -26,7 +96,7 @@
     "    df[\"best_bid\"] = df[\"bids\"].apply(_top_price)\n",
     "    df[\"best_ask\"] = df[\"asks\"].apply(_top_price)\n",
     "\n",
-    "    return df[[\"time\", \"best_bid\", \"best_ask\"]].sort_values(\"time\")\n",
+    "    return df[[\"time\", \"token_pair\", \"best_bid\", \"best_ask\"]].sort_values(\"time\")\n",
     "\n",
     "def apply_fee(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -34,68 +104,124 @@
     "    \"\"\"\n",
     "    df[\"best_bid_with_fee\"] = df[\"best_bid\"] * (1 - BINANCE_FEE)  # Subtract fee for bids\n",
     "    df[\"best_ask_with_fee\"] = df[\"best_ask\"] * (1 + BINANCE_FEE)  # Add fee for asks\n",
-    "    df[\"best_bid_with_fee_VIP9\"] = df[\"best_bid\"] * (1 - BINANCE_FEE)  # Subtract fee for bids\n",
-    "    df[\"best_ask_with_fee_VIP9\"] = df[\"best_ask\"] * (1 + BINANCE_FEE)  # Add fee for asks\n",
+    "    df[\"best_bid_with_fee_VIP9\"] = df[\"best_bid\"] * (1 - BINANCE_FEE_VIP9)  # Subtract fee for bids\n",
+    "    df[\"best_ask_with_fee_VIP9\"] = df[\"best_ask\"] * (1 + BINANCE_FEE_VIP9)  # Add fee for asks\n",
     "\n",
     "    return df\n",
     "\n",
-    "# Unichain\n",
-    "df_unichain = pd.read_csv(\"/home/tobias/personal-dex-trading/out/data/latest_unichain_uniswap_v4_blocks.csv\", index_col=\"timestamp\")\n",
-    "df_unichain.index = pd.to_datetime(df_unichain.index, unit=\"s\")  # seconds -> datetime\n",
-    "df_unichain.index += pd.Timedelta(hours=2)\n",
+    "def invert_and_transform(df):\n",
+    "    \"\"\"\n",
+    "    Invert best_bid and best_ask, and reverse token_pair, adjust to uniswap v4\n",
+    "    \"\"\"\n",
+    "    inversion_mapping = {\n",
+    "        'wbtceth':'ethwbtc',\n",
+    "        'uniusdc': 'usdcuni',\n",
+    "        'unieth': 'ethuni',\n",
+    "    }\n",
     "\n",
-    "# Binance\n",
+    "    mask = df[\"token_pair\"].isin(inversion_mapping.keys())\n",
+    "    df.loc[mask, \"best_bid\"], df.loc[mask, \"best_ask\"] = (\n",
+    "        1 / df.loc[mask, \"best_ask\"],  # Invert ask to become the new bid\n",
+    "        1 / df.loc[mask, \"best_bid\"],  # Invert bid to become the new ask\n",
+    "    )\n",
+    "    df.loc[mask, \"token_pair\"] = df.loc[mask, \"token_pair\"].map(inversion_mapping)\n",
+    "    return df\n",
+    "\n",
+    "\n",
     "binance_df = load_binance(\"/home/tobias/personal-dex-trading/out/data/latest_binance_ws_orderbook.csv\")\n",
     "binance_df[\"time\"] = pd.to_datetime(binance_df[\"time\"])\n",
+    "binance_df = invert_and_transform(binance_df)\n",
     "binance_df = apply_fee(binance_df)\n",
     "\n",
-    "# merge df\n",
-    "merged_df =  pd.merge_asof(\n",
-    "    binance_df.sort_values(\"time\"),\n",
-    "    df_unichain.sort_index(),\n",
-    "    left_on=\"time\",\n",
-    "    right_index=True,\n",
-    "    direction=\"backward\"\n",
+    "print(f\"len(df_unichain): {len(binance_df)}\")\n",
+    "binance_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f535425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### MERGE\n",
+    "\n",
+    "def create_merged_dataframe(df_unichain, binance_df):\n",
+    "    df_unichain[\"timestamp\"] = pd.to_datetime(df_unichain[\"timestamp\"])\n",
+    "    binance_df[\"time\"] = pd.to_datetime(binance_df[\"time\"])\n",
+    "\n",
+    "    df_merged = pd.merge(\n",
+    "        df_unichain,\n",
+    "        binance_df,\n",
+    "        how=\"inner\",\n",
+    "        left_on=[\"token_pair\", \"timestamp\"],\n",
+    "        right_on=[\"token_pair\", \"time\"]\n",
+    "    )\n",
+    "\n",
+    "    df_merged = df_merged[[\n",
+    "        \"time\", \"token_pair\",\n",
+    "        \"best_bid_with_fee\",\n",
+    "        \"best_ask_with_fee\",\n",
+    "        \"bid_trans_norm\",\n",
+    "        \"ask_trans_norm\"\n",
+    "    ]]\n",
+    "\n",
+    "    # Rename columns where necessary for clarity\n",
+    "    df_merged = df_merged.rename(columns={\n",
+    "        \"bid_trans_norm\": \"unichain_bid_trans_norm\",\n",
+    "        \"ask_trans_norm\": \"unichain_ask_trans_norm\",\n",
+    "        \"best_bid_with_fee\": \"binance_best_bid_with_fee\",\n",
+    "        \"best_ask_with_fee\": \"binance_best_ask_with_fee\",\n",
+    "    })\n",
+    "\n",
+    "    return df_merged\n",
+    "merged_df = create_merged_dataframe(df_unichain, binance_df)\n",
+    "\n",
+    "# add arbitrage columns\n",
+    "merged_df[\"arbitrage_buy_binance_sell_unichain\"] = (\n",
+    "    merged_df[\"unichain_bid_trans_norm\"] - merged_df[\"binance_best_ask_with_fee\"]\n",
     ")\n",
-    "merged_df[\"bid_0.00001_weth\"] = (merged_df[\"token1_outputs\"].apply(ast.literal_eval).apply(lambda x: x[0][0] if isinstance(x, list) else None) / 10**6)\n",
-    "merged_df[\"ask_0.00001_weth\"] = (merged_df[\"token1_inputs\"].apply(ast.literal_eval).apply(lambda x: x[0][0] if isinstance(x, list) else None) / 10**6)\n",
+    "merged_df[\"arbitrage_buy_unichain_sell_binance\"] = (\n",
+    "    merged_df[\"binance_best_bid_with_fee\"] - merged_df[\"unichain_ask_trans_norm\"]\n",
+    ")\n",
+    "merged_df[\"arbitrage_opportunity\"] = (\n",
+    "    (merged_df[\"arbitrage_buy_binance_sell_unichain\"] > 0) |\n",
+    "    (merged_df[\"arbitrage_buy_unichain_sell_binance\"] > 0)\n",
+    ")\n",
+    "\n",
+    "print(f\"len(df_unichain): {len(merged_df)}\")\n",
     "merged_df.head(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "313c0f0e",
+   "id": "3424e8ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "\n",
-    "long_df = merged_df.melt(id_vars=\"time\",\n",
-    "                         value_vars=[\"best_bid_with_fee\", \"best_ask_with_fee\", \"bid_0.00001_weth\", \"ask_0.00001_weth\"],\n",
-    "                         var_name=\"Type\",\n",
-    "                         value_name=\"Price\")\n",
-    "\n",
-    "# Plot with Plotly Express\n",
-    "fig = px.line(\n",
-    "    long_df,\n",
-    "    x=\"time\",\n",
-    "    y=\"Price\",\n",
-    "    color=\"Type\",\n",
-    "    markers=True,\n",
-    "    title=\"Best Bids/Asks vs Bid/Ask for 0.00001 WETH\",\n",
-    "    labels={\"time\": \"Time\", \"Price\": \"Price\", \"Type\": \"Legend\"}\n",
-    ")\n",
-    "\n",
-    "# Update layout for better readability\n",
-    "fig.update_layout(\n",
-    "    xaxis=dict(showgrid=True, tickformat='%H:%M:%S'),\n",
-    "    yaxis=dict(showgrid=True),\n",
-    "    hovermode=\"x unified\"  # Show hover labels for all lines\n",
-    ")\n",
-    "\n",
-    "# Show the plot\n",
-    "fig.show()"
+    "### ARBITRAGE ANALYSIS\n",
+    "print(f\"token_pair with arbitrage_opportunity=True:\\n{merged_df[merged_df['arbitrage_opportunity']].token_pair.unique()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36e2d1ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.iloc[1285:1290]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67fcbdfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df[(merged_df[\"token_pair\"]==\"usdcuni\")&(merged_df[\"arbitrage_opportunity\"])][\"arbitrage_buy_binance_sell_unichain\"].max()"
    ]
   }
  ],
